# adahessian

./: .gitignore  README.md  pyproject.toml
adahessian_torch/: optim_adahessian.py
config/: function_example.yaml
examples/: function_approximation.py  function_example.py  plot_rastrigin.py
high_order_layers_optimizers/: optim_adahessian.py
image_classification/: main.py
