[tool.poetry]
name = "high-order-layers-adahessian"
version = "0.1.0"
description = ""
authors = ["jloveric <john.loverich@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "high_order_layers_adahessian"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
numpy = "^1.24.2"
torchvision = "^0.14.1"
pytorchcv = "^0.0.67"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
