[tool.poetry]
name = "high-order-layers-optimizers"
version = "0.1.0"
description = ""
authors = ["jloveric <john.loverich@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "high_order_layers_optimizers"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
pytorchcv = "^0.0.67"
tqdm = "^4.64.1"
high-order-layers-torch = "^2.0.0"
torchvision = "^0.15.1"


[tool.poetry.group.dev.dependencies]
hydra-core = "^1.3.1"
pytorch-lightning = "^1.9.2"
pytest = "^7.2.1"
matplotlib = "^3.7.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
